# u-lang

./: .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md
cmake/modules/: CXXAdvancedTesting.cmake  CodeCoverage.cmake  CommonCppFlags.cmake  EnableStdTypes.cmake  FindLLVM.cmake  Findgflags.cmake  Versioning.cmake  stdtypes.h.in  valgrind.supp
include/u-lang/: u.hpp
include/u-lang/AST/: ASTContext.hpp  ASTNode.hpp  ASTNodes.def
include/u-lang/Basic/: Diagnostic.hpp  DiagnosticIDs.def  DiagnosticIDs.hpp  DiagnosticIDs.ods  FileManager.hpp  IdentifierTable.hpp  PunctuatorTable.hpp  Source.hpp  SourceLocation.hpp  SourceManager.hpp  TokenKinds.def  TokenKinds.hpp  VirtualFileSystem.hpp
include/u-lang/Lex/: Lexer.hpp  Token.hpp
lib/: CMakeLists.txt
lib/AST/: ASTNode.cpp  CMakeLists.txt
lib/Basic/: CMakeLists.txt  Diagnostic.cpp  DiagnosticIDs.cpp  IdentifierTable.cpp  PunctuatorTable.cpp  Source.cpp  SourceManager.cpp  TokenKinds.cpp  VirtualFileSystem.cpp
lib/Lex/: CMakeLists.txt  Lexer.cpp
tests/: CMakeLists.txt  tests.cpp
tests/AST/: ASTNode.cpp
tests/Basic/: Diagnostic.cpp  FileManager.cpp  PunctuatorTable.cpp  Source.cpp  SourceManager.cpp  TokenKinds.cpp  VirtualFileSystem.cpp
tests/Lex/: Lexer.cpp
tests/fixtures/Basic/: FileSource-CanPassSanityCheck.u
tests/fixtures/VFS-overlay/b/1/: test.txt
tests/fixtures/VFS-overlay/b/3/: bom.u
